[gd_scene load_steps=21 format=2]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/New_Player.gd" type="Script" id=3]
[ext_resource path="res://scenes/Map.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/Generator.gd" type="Script" id=5]
[ext_resource path="res://scripts/UI.gd" type="Script" id=6]
[ext_resource path="res://graphics/UI/Menu-Background.png" type="Texture" id=7]
[ext_resource path="res://Font.tres" type="DynamicFont" id=8]
[ext_resource path="res://scripts/PlayerUI.gd" type="Script" id=9]
[ext_resource path="res://good times rg.ttf" type="DynamicFontData" id=10]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.552941, 0.552941, 0.552941, 0.921569 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.133333, 0.133333, 0.133333, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.133333, 0.133333, 0.133333, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.133333, 0.133333, 0.133333, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.266667, 0.266667, 0.266667, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 0.564706 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.533333, 0.533333, 0.533333, 0.752941 )

[sub_resource type="DynamicFont" id=8]
size = 32
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=9]
extra_spacing_char = 1
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=10]
extra_spacing_char = 1
font_data = ExtResource( 10 )

[node name="Spatial" type="Spatial"]
script = ExtResource( 1 )

[node name="Viewport" type="Viewport" parent="."]

[node name="Player" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 194.748, 0 )
script = ExtResource( 3 )

[node name="GridMap" parent="." instance=ExtResource( 4 )]
data = {
"cells": PoolIntArray( -13107191, 0, 4, -13107190, 0, 4, -13107188, 0, 4, -13107192, 1, 4, -13107191, 1, 4, -13107190, 1, 4, -13107186, 1, 4, -13107194, 2, 4, -13107193, 2, 4, -13107192, 2, 1073741828, -13107189, 2, 4, -13107187, 2, 4, -13107186, 2, 536870916, -13107191, 3, 4, -13107190, 3, 4, -13107189, 3, 4, -13107187, 3, 4, -13107186, 3, 4, -13107185, 3, 4, -13107194, 4, 4, -13107193, 4, 4, -13107192, 4, 4, -13107191, 4, 1073741828, -13107190, 4, 4, -13107189, 4, 4, -13107188, 4, 4, -13107187, 4, 4, -13107186, 4, 4, -13107185, 4, 4, -13107193, 5, 4, -13107192, 5, 1073741828, -13107191, 5, 4, -13107190, 5, 4, -13107189, 5, 4, -13107188, 5, 4, -13107187, 5, 4, -13107194, 6, 1073741828, -13107193, 6, 4, -13107192, 6, 4, -13107190, 6, 4, -13107188, 6, 4, -13107187, 6, 4, -13107194, 7, 4, -13107192, 7, 4, -13107191, 7, 4, -13107190, 7, 1073741828, -13107189, 7, 4, -13107188, 7, 4, -13107186, 7, 4, -13107189, 8, 4, -13107187, 8, 1073741828, -13107189, 9, 4, 524298, 65524, -1610612736, 524299, 65524, 0, 524296, 65525, 536870912, 524297, 65525, 0, 524298, 65525, 0, 524299, 65525, 0, 524300, 65525, 0, 524294, 65526, 0, 524295, 65526, 0, 524296, 65526, 0, 524297, 65526, 0, 524298, 65526, 0, 524299, 65526, 0, 524300, 65526, -1610612736, 524293, 65527, 0, 524294, 65527, 0, 524295, 65527, 0, 524296, 65527, -1610612736, 524297, 65527, 536870912, 524298, 65527, 536870912, 524299, 65527, 0, 524300, 65527, 0, 524301, 65527, -1610612736, 589830, 65527, 0, 589831, 65527, 0, 589832, 65527, -1610612736, 589833, 65527, 536870912, 589834, 65527, 0, 524293, 65528, 0, 524294, 65528, 0, 524295, 65528, -1610612736, 524296, 65528, 0, 524297, 65528, 0, 524298, 65528, -1610612736, 524299, 65528, 536870912, 524300, 65528, 536870912, 524301, 65528, 536870912, 589830, 65528, -1610612736, 589831, 65528, 536870912, 589832, 65528, 0, 589833, 65528, 0, 589834, 65528, 536870912, 655367, 65528, 536870912, 655368, 65528, 0, 655369, 65528, -1610612736, 524293, 65529, 0, 524294, 65529, 0, 524295, 65529, 0, 524296, 65529, -1610612736, 524297, 65529, 536870912, 524298, 65529, 0, 524299, 65529, -1610612736, 524300, 65529, 536870912, 524301, 65529, 536870912, 524302, 65529, -1610612736, 589830, 65529, -1610612736, 589831, 65529, 0, 589832, 65529, 0, 589833, 65529, 0, 589834, 65529, -1610612736, 655367, 65529, 0, 655368, 65529, 0, 655369, 65529, 0, 720904, 65529, 0, 524293, 65530, -1610612736, 524294, 65530, 536870912, 524295, 65530, 0, 524296, 65530, 0, 524297, 65530, 536870912, 524298, 65530, 536870912, 524299, 65530, 0, 524300, 65530, 0, 524301, 65530, 536870912, 524302, 65530, 536870912, 589830, 65530, 0, 589831, 65530, 0, 589832, 65530, 0, 589833, 65530, 0, 589834, 65530, -1610612736, 655367, 65530, -1610612736, 655368, 65530, 0, 655369, 65530, 0, 524293, 65531, 0, 524294, 65531, 0, 524295, 65531, 536870912, 524296, 65531, 0, 524297, 65531, 536870912, 524298, 65531, 0, 524299, 65531, 0, 524300, 65531, 536870912, 524301, 65531, 536870912, 589830, 65531, 0, 589831, 65531, 0, 589832, 65531, 0, 589833, 65531, 536870912, 589834, 65531, 1073741824, 524293, 65532, -1610612736, 524294, 65532, 0, 524295, 65532, 0, 524296, 65532, 0, 524297, 65532, 0, 524298, 65532, -1610612736, 524299, 65532, -1610612736, 524300, 65532, 536870912, 524301, 65532, 0, 524293, 65533, 0, 524294, 65533, 536870912, 524295, 65533, 0, 524296, 65533, 0, 524297, 65533, 0, 524298, 65533, 536870912, 524299, 65533, 536870912, 524300, 65533, 0, 524293, 65534, -1610612736, 524294, 65534, -1610612736, 524295, 65534, -1610612736, 524296, 65534, 0, 524297, 65534, -1610612736, 524298, 65534, 0, 524299, 65534, 536870912, 524295, 65535, 0, 524296, 65535, 0, -13107190, 65535, 4, -13107189, 65535, 4 )
}
script = ExtResource( 5 )

[node name="FP" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.12, 8.12915, 5.56723 )
far = 1024.0

[node name="TP" type="Camera" parent="."]
transform = Transform( 1, -7.45058e-009, 4.21885e-015, 6.89122e-009, 0.924924, 0.380151, -2.83235e-009, -0.380151, 0.924924, 0.131317, 192.125, 255.048 )
current = true
far = 1024.0

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 6 )

[node name="Main Menu" type="TextureRect" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )
expand = true
stretch_mode = 1

[node name="Menu" type="Panel" parent="UI/Main Menu"]
light_mask = 3
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = -230.0
margin_right = 296.0
margin_bottom = -42.0
grow_horizontal = 2
grow_vertical = 2
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Main Menu/Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 50.0
margin_right = -12.0
margin_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="BtnPlay" type="Button" parent="UI/Main Menu/Menu/VBoxContainer"]
margin_right = 232.0
margin_bottom = 35.0
custom_fonts/font = ExtResource( 8 )
text = "Play"

[node name="BtnSettings" type="Button" parent="UI/Main Menu/Menu/VBoxContainer"]
margin_top = 45.0
margin_right = 232.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 8 )
text = "Settings"

[node name="BtnQuit" type="Button" parent="UI/Main Menu/Menu/VBoxContainer"]
margin_top = 90.0
margin_right = 232.0
margin_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 8 )
text = "Quit"

[node name="Label" type="Label" parent="UI/Main Menu/Menu"]
margin_left = 12.0
margin_top = 10.0
margin_right = 102.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 8 )
text = "Menu"

[node name="Player" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )

[node name="HealthBar" type="ProgressBar" parent="UI/Player"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -30.0
margin_right = 220.0
margin_bottom = -6.0
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
step = 1.0
value = 50.0
percent_visible = false

[node name="Hotbar" type="Panel" parent="UI/Player"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -146.0
margin_top = -46.0
margin_right = 146.0
margin_bottom = -6.0
custom_styles/panel = SubResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Player/Hotbar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
custom_constants/separation = 4

[node name="1" type="Panel" parent="UI/Player/Hotbar/HBoxContainer"]
margin_right = 32.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 5 )

[node name="2" type="Panel" parent="UI/Player/Hotbar/HBoxContainer"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 5 )

[node name="3" type="Panel" parent="UI/Player/Hotbar/HBoxContainer"]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 5 )

[node name="4" type="Panel" parent="UI/Player/Hotbar/HBoxContainer"]
margin_left = 108.0
margin_right = 140.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 5 )

[node name="5" type="Panel" parent="UI/Player/Hotbar/HBoxContainer"]
margin_left = 144.0
margin_right = 176.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 5 )

[node name="6" type="Panel" parent="UI/Player/Hotbar/HBoxContainer"]
margin_left = 180.0
margin_right = 212.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 5 )

[node name="7" type="Panel" parent="UI/Player/Hotbar/HBoxContainer"]
margin_left = 216.0
margin_right = 248.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 5 )

[node name="8" type="Panel" parent="UI/Player/Hotbar/HBoxContainer"]
margin_left = 252.0
margin_right = 284.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 5 )

[node name="Selection" type="Polygon2D" parent="UI/Player/Hotbar"]
position = Vector2( 3.99997, 3.99994 )
scale = Vector2( 0.975, 1 )
color = Color( 0.533333, 0.533333, 0.533333, 1 )
invert_enable = true
invert_border = 2.0
polygon = PoolVector2Array( 0, 0, 0, 32, 32.8205, 32, 32.8205, 0 )

[node name="Respawn" type="Panel" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 6 )

[node name="Panel" type="Panel" parent="UI/Respawn"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -114.0
margin_top = -139.0
margin_right = 114.0
margin_bottom = 9.0
custom_styles/panel = SubResource( 7 )

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Respawn/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -98.5
margin_top = -61.5
margin_right = 98.5
margin_bottom = 61.5
custom_constants/separation = 16

[node name="Label" type="Label" parent="UI/Respawn/Panel/VBoxContainer"]
margin_right = 197.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 8 )
text = "YOU DIED!"
align = 1
valign = 1

[node name="BtnRespawn" type="Button" parent="UI/Respawn/Panel/VBoxContainer"]
margin_top = 55.0
margin_right = 197.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 9 )
text = "Respawn"

[node name="BtnMenu" type="Button" parent="UI/Respawn/Panel/VBoxContainer"]
margin_top = 97.0
margin_right = 197.0
margin_bottom = 123.0
custom_fonts/font = SubResource( 10 )
text = "Menu"
[connection signal="death" from="Player" to="UI" method="_on_Player_death"]
[connection signal="worldready" from="GridMap" to="Player" method="_on_GridMap_worldready"]
[connection signal="play" from="UI" to="Player" method="_on_UI_play"]
[connection signal="play" from="UI" to="GridMap" method="_on_UI_play"]
[connection signal="play" from="UI" to="." method="_on_UI_play"]
[connection signal="play" from="UI" to="UI/Player" method="_on_UI_play"]
[connection signal="pressed" from="UI/Main Menu/Menu/VBoxContainer/BtnPlay" to="UI" method="_on_BtnPlay_pressed"]
[connection signal="pressed" from="UI/Main Menu/Menu/VBoxContainer/BtnQuit" to="UI" method="_on_BtnQuit_pressed"]
[connection signal="pressed" from="UI/Respawn/Panel/VBoxContainer/BtnRespawn" to="Player" method="_on_BtnRespawn_pressed"]
[connection signal="pressed" from="UI/Respawn/Panel/VBoxContainer/BtnRespawn" to="UI" method="_on_BtnRespawn_pressed"]
[connection signal="pressed" from="UI/Respawn/Panel/VBoxContainer/BtnMenu" to="UI" method="_on_BtnMenu_pressed"]
